--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-bla
+<html >
+    <head>  
+        <title>Minha Primeira Pagina WEB</title>
+    </head>
+    
+    <body>  
+         <h1>Primeira Pagina WEB </h1>
+         <button>Botazinho </button>
+    </body>
+</html>
