--- a/index.html
+++ b/index.html
@@ -6,5 +6,22 @@
     <body>  
          <h1>Primeira Pagina WEB </h1>
          <button>Botazinho </button>
+        <h1>Comandos GIT</h1>
+        <ul>
+            <li>git init- criar um repositorio;</li>
+            <li>git add [file] :adiciona um arquivo no stage;</li>
+            <li>git status : exibe o estado do rtepositorio;</li>
+            <li> commit -m "msg" : cria um commit;</li>
+            <li> log : exibe o commits do repositorio, da branch atual;</li>
+            <li>git checkout referencia   ; Recupera o conteudo da referencia  para WK;</li>
+            <li> git remote add nome url :definir um repositorio remoto;</li>
+            <li>git  push url branch : envia a branch paar repositorio remoto;</li>
+
+
+
+        </ul>
+
+
+
     </body>
 </html>
