--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             <li>git checkout referencia   ; Recupera o conteudo da referencia  para WK;</li>
             <li> git remote add nome url :definir um repositorio remoto;</li>
             <li>git  push url branch : envia a branch paar repositorio remoto;</li>
-
-
-
+            <li>git log --oneline;</li>
+            <li>git reset referencia --hard;</li>
+            <li>git checkout -b nova brencha [referencia];</li>
+            
         </ul>
 
 
