--- a/index.html
+++ b/index.html
@@ -1,28 +1,17 @@
-<html >
-    <head>  
-        <title>Minha Primeira Pagina WEB</title>
-    </head>
-    
-    <body>  
-         <h1>Primeira Pagina WEB </h1>
-         <button>Botazinho </button>
-        <h1>Comandos GIT</h1>
-        <ul>
-            <li>git init- criar um repositorio;</li>
-            <li>git add [file] :adiciona um arquivo no stage;</li>
-            <li>git status : exibe o estado do rtepositorio;</li>
-            <li> commit -m "msg" : cria um commit;</li>
-            <li> log : exibe o commits do repositorio, da branch atual;</li>
-            <li>git checkout referencia   ; Recupera o conteudo da referencia  para WK;</li>
-            <li> git remote add nome url :definir um repositorio remoto;</li>
-            <li>git  push url branch : envia a branch paar repositorio remoto;</li>
-            <li>git log --oneline;</li>
-            <li>git reset referencia --hard;</li>
-            <li>git checkout -b nova brencha [referencia];</li>
-            
-        </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2> Aulas</h2>
+    <ul>
+        <li> <a href="./svc.html"> Aula 1 - Plano de Ensino e git</a></li>
+        <li> <a href="./historiaweb.html">Aula 2 - História da web, arquitetura servidor e HTTP</a></li>
+        <li> <a href="./html.html">Aula 3 - HTML tags texto e listas e tabelas</a></li>
 
-
-
-    </body>
+    </ul>
+</body>
 </html>
